--- a/Auth/style.css
+++ b/Auth/style.css
@@ -6,7 +6,62 @@
 }
 
 
-.body {
+body {
 display: flex;
 justify-content: center;
+align-items: center;
+min-height: 100vh;
 }
+
+.wrapper{
+    background-color: #0763EC;
+    width: 100vh;
+    border-radius: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.auth-tabs{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.auth-form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.auth-box{
+    outline: none;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.tab {
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.3s;
+}
+  
+.tab.active,
+ .tab:hover {
+    border-bottom: 2px solid white;
+}
+
+.btn {
+    border: none;
+    border-radius: 5px;
+    color: #007bff;
+    background-color: white;
+    padding: 7px;
+    margin: 10px;
+}
+
+.btn:hover {
+    background-color: #e0e0e0;
+  }
