--- a/Auth/style.css
+++ b/Auth/style.css
@@ -11,6 +11,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 min-height: 100vh;
+background-color: rgb(23, 23, 23);
 }
 
 .wrapper{
