Осталось доделать вкладку "Как это работает"
Короче я все сделал и придумал как сделать вкладу. А еще я сделал адаптив для мобилок. И завтра продолжу, а сегодня я устал мощно

--- a/index/style.css
+++ b/index/style.css
@@ -5,3 +5,9 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+.todo{
+	float: left;
+	shape-outside: polygon(78.48% 437px, 106.00% 90.77%, 439px 12.69%);
+	
+}
