Сделал описание до 3
Третий скоро доделаю

--- a/index/style.css
+++ b/index/style.css
@@ -11,3 +11,9 @@
 	shape-outside: polygon(78.48% 437px, 106.00% 90.77%, 439px 12.69%);
 	
 }
+
+.todo1{
+	float: right;
+	shape-outside: polygon(29.46% 157px, -11.58% 81.72%, -20px 9.61%);
+	
+}
