--- a/index/style.css
+++ b/index/style.css
@@ -17,3 +17,8 @@
 	shape-outside: polygon(29.46% 157px, -11.58% 81.72%, -20px 9.61%);
 	
 }
+
+.todo2{
+	float: right;
+	shape-outside: polygon(-8.43% 520px, -11.58% 81.72%, 66px 13.42%);
+}
