--- a/Person Account/styleForPA.css
+++ b/Person Account/styleForPA.css
@@ -1,7 +1,35 @@
-.position {
-    margin-left: 1100px;
-    padding: 10px;
+body{
+   margin: 70px;
 }
+
+
+.main {
+    display: flex;
+    justify-content: space-between;
+}
+
+.container1 {
+
+}
+
+.container2 {
+    border: 5px solid #0763EC;
+    padding-top: 20px;
+    padding-bottom: ;
+    padding-left: 30px;
+    padding-right: 40px;
+    color: white;
+}
+
+.contract{
+    color: white;
+    padding: 10px;
+    padding-bottom: 40px;
+    padding-right: 460%;
+    margin: 40px;
+    border: 3px solid #0763EC;
+}
+
 
 .rounded-full {
     height: 100px;
