--- a/index/style.css
+++ b/index/style.css
@@ -28,7 +28,17 @@
 	shape-outside: polygon(96.45% 214px, 107.17% 61.47%, 386px 14.14%);
 }
 
-.icons{
+.icons {
 	display: flex;
 	justify-content: space-between;
+	gap: 33rem; /* Расстояние между элементами */
+	max-width: 15rem;
+	margin-left: 5rem;
+  }
+.text{
+	display: flex;
+	justify-content: space-between;
+	gap: 34rem; /* Расстояние между элементами */
+	max-width: 7rem;
+	margin-left: 3rem;
 }
