--- a/index/style.css
+++ b/index/style.css
@@ -6,15 +6,19 @@
 	box-sizing: border-box;
 }
 
-@media only screen and (min-width: 1024px){
-	.icons {
-		justify-content: space-between;
-		max-width: 10rem;
-		align-items: center;
-		margin-top: -26rem;
-		margin-left: 6rem;
-	  }
+
+@media only screen and (min-width: 1024px) {
+    .icons {
+        margin-left: 3rem !important;
+		padding-top: 12rem;
+		max-width: 9rem !important;
+    }
+    .blue {
+        margin: auto;
+        width: 100% !important;
+    }
 }
+
 
 .target{
 	float: left;
