--- a/index/style.css
+++ b/index/style.css
@@ -9,6 +9,7 @@
 
 @media only screen and (min-width: 1024px) {
     .icons {
+		margin: auto;
         margin-left: 3rem !important;
 		padding-top: 12rem;
 		max-width: 9rem !important;
@@ -16,6 +17,18 @@
     .blue {
         margin: auto;
         width: 100% !important;
+    }
+}
+
+@media only screen and (min-width: 1880px) {
+    .icons {
+        margin-top: -27rem !important;
+		margin-left: 12rem !important;
+		gap: 2rem;
+    }
+    .blue {
+        margin: auto;
+        width: 89% !important;
     }
 }
 
