--- a/index/style.css
+++ b/index/style.css
@@ -11,13 +11,11 @@
         display: flex;
         flex-direction: column; /* Горизонтальное расположение */
         justify-content: space-around; /* Равномерное распределение по ширине */
-        align-items: center; /* Вертикальное выравнивание элементов */
         margin-left: auto !important;
         padding-top: 10rem; /* Как у вас в изначальном коде */
         max-width: 100%; /* Динамическая ширина */
     }
     .blue {
-        margin: auto;
         width: 100%; /* Используем всю ширину экрана */
         padding: 2rem; /* Внутренний отступ */
         border-radius: 5rem; /* Округление углов */
@@ -27,10 +25,10 @@
         height: auto; /* Сохраняем пропорции */
     }
     .icons p {
+        display: flex;
         font-size: 1rem; /* Размер шрифта для текста */
         text-align: center; /* Оставляем текст по левому краю */
-        margin: auto;
-        justify-items: center;
+        padding-right: 8rem;
     }
 }
 
