--- a/index/style.css
+++ b/index/style.css
@@ -10,32 +10,39 @@
     .icons {
         display: flex;
         flex-direction: column; /* Горизонтальное расположение */
-        justify-content: space-around; /* Равномерное распределение по ширине */
+        margin-right: auto !important;
         margin-left: auto !important;
         padding-top: 10rem; /* Как у вас в изначальном коде */
-        max-width: 100%; /* Динамическая ширина */
     }
     .blue {
         padding: 2rem; /* Внутренний отступ */
         border-radius: 3rem; /* Округление углов */
-        padding-right: 5rem;
+        max-width: 100%;
+        margin-right: auto !important;
+        margin-left: auto !important;
+        
     }
     .icons img {
         width: 80px; /* Устанавливаем фиксированный размер для иконок */
         height: auto; /* Сохраняем пропорции */
-        margin-left: 4rem;
+        margin-right: auto !important;
+        margin-left: auto !important;
+
+        
     }
     .icons p {
         display: flex;
         font-size: 1rem; /* Размер шрифта для текста */
         text-align: center; /* Оставляем текст по левому краю */
-        padding-right: 7rem;
+        margin-right: auto !important;
+        margin-left: auto !important;
     }
 
     .mountain {
         width: 80px; /* Устанавливаем фиксированный размер для иконок */
         height: auto !important; /* Сохраняем пропорции */
-        margin-left: 1rem !important;
+        margin-right: auto !important;
+        margin-left: auto !important;
     }
 }
 
