--- a/auth/accounts/templates/accounts/login.html
+++ b/auth/accounts/templates/accounts/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Авторизация</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/ForTailWindCSS/styleTW.css">
 </head>
 
 <body>
