--- a/auth/accounts/templates/accounts/register.html
+++ b/auth/accounts/templates/accounts/register.html
@@ -7,7 +7,7 @@
     <title>Регистрация</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleReg.css' %}">
 
 </head>
 <body>
