--- a/auth/accounts/templates/accounts/about.html
+++ b/auth/accounts/templates/accounts/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>О нас</title>
   <link rel="stylesheet" href="/ForTailWindCSS/styleTW.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{% static 'css/styleForONas.css' %}">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex-auto relative w-full h-screen" style="background-color: #131313;">
@@ -13,7 +14,7 @@
     <div>
       <nav class="flex items-center">
         <ul class="flex-1 text-center pt-5 text-xl font-normal">
-            <li class="list-none inline-block px-10 pb-5"><a href="/index/index.html" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Домой</a></li>
+            <li class="list-none inline-block px-10 pb-5"><a href="{% url 'index' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Домой</a></li>
             <li class="list-none inline-block px-10"><a href="/O nas/o nas.html" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">О нас</a></li>
             <li class="list-none inline-block px-10"><a href="/Auth/registration.html" class="no-underline text-white bg-[#0763EC] hover:bg-[#073882] hover:text-white rounded-3xl px-3 py-3 transition duration-300">Войти | Регистрация</a></li>
             <hr class="sm:m-auto mt-6" width="100%" size="2">
@@ -23,7 +24,7 @@
     </header>
     <main class="h-dvh">
       <div class="text-white">
-        <img class="h-auto max-w-xs ml-4 sm:max-w-sm md:max-w-md lg:max-w-lg lg:float-left lg:-ml-16" src="target.png">
+        <img class="h-auto max-w-xs ml-4 sm:max-w-sm md:max-w-md lg:max-w-lg lg:float-left lg:-ml-16" src="img/target.png">
         <span class="ml-32 lg:mt-16 lg:ml-80 before:block before:absolute before:-inset-6 before:-skew-y-2 before:-skew-x-12 before:bg-blue-600 relative inline-block ">
           <p class="text-2xl lg:text-5xl text-center relative">Кто мы?</p>
         </span>
