--- a/auth/accounts/templates/index.html
+++ b/auth/accounts/templates/index.html
@@ -15,13 +15,11 @@
     <div>
         <nav class="flex items-center">
             <ul class="flex-1 text-center pt-5 text-xl font-normal">
-                <li class="list-none inline-block px-10 pb-5"><a href="index.html" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Домой</a></li>
-                <li class="list-none inline-block px-10"><a href="/O nas/o nas.html" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">О нас</a></li>
-                <!--<li class="list-none inline-block px-10"><a href="/Auth/registration.html" class="no-underline text-white bg-[#0763EC] hover:bg-[#073882] hover:text-white rounded-3xl px-3 py-3 transition duration-300">Войти | Регистрация</a></li>-->
-               
+                <li class="list-none inline-block px-10 pb-5"><a href="{% url 'index' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Домой</a></li>
+                <li class="list-none inline-block px-10"><a href="{% url 'about' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">О нас</a></li>
                 {% if user.is_authenticated %}
                   <li class="list-none inline-block px-10"> <a href="{% url 'profile' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300"> Личный кабинет</a></li>
-                  <li class="list-none inline-block px-10"> <a href="{% url 'login' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300"> Оформить договор</a></li>
+                  
                    {% else %}
                      <li class="list-none inline-block px-10"> <a href="{% url 'login' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300"> Войти</a></li>
                 {% endif %}
@@ -34,16 +32,27 @@
     </header>
         <main class="h-dvh">
             <div class="text-white mt-36 font-serif pr-72 text-center ">
-                <h1 class="text-3xl font-normal pr-52 px-7 lg:text-6xl lg:pr-7">Готовы ли вы наконец</h1>
-                <h1 class="text-3xl font-normal px-7 lg:text-6xl lg:pr-48 lg:pt-2 lg:px-8">придерживаться</h1>
-                <h1 class="text-3xl font-normal px-7  lg:text-6xl lg:pr-80 lg:pt-2 lg:px-4">своих целей?</h1>
-                <h1 class="text-3xl font-normal pr-52 px-7 pt-2 lg:text-6xl lg:pr-96 lg:pt-2 lg:px-1">Я обязуюсь</h1>
-                <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9">
-                    <a href="{% url 'register' %}" 
-                       class="no-underline text-white bg-[#0763EC] hover:bg-[#073882] hover:text-white rounded-xl px-2 py-1 transition-shadow duration-300 shadow-none hover:shadow-xl hover:shadow-[#073c82]">
-                      зарегистрироваться
-                    </a>
-                  </h1>
+                {% if user.is_authenticated %}
+                    <h1 class="text-3xl font-normal px-7  lg:text-6xl lg:pr-80 lg:pt-2 lg:px-4">Оформить</h1>
+                    <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9">
+                        <a href="{% url 'register' %}" 
+                            class="no-underline text-white bg-[#0763EC] hover:bg-[#073882] hover:text-white rounded-xl px-2 py-1 transition-shadow duration-300 shadow-none hover:shadow-xl hover:shadow-[#073c82]">
+                               Договор
+                        </a>
+                   </h1>
+                    {% else %} 
+                        <h1 class="text-3xl font-normal pr-52 px-7 lg:text-6xl lg:pr-7">Готовы ли вы наконец</h1>
+                        <h1 class="text-3xl font-normal px-7 lg:text-6xl lg:pr-48 lg:pt-2 lg:px-8">придерживаться</h1>
+                        <h1 class="text-3xl font-normal px-7  lg:text-6xl lg:pr-80 lg:pt-2 lg:px-4">своих целей?</h1>
+                        <h1 class="text-3xl font-normal pr-52 px-7 pt-2 lg:text-6xl lg:pr-96 lg:pt-2 lg:px-1">Я обязуюсь</h1>
+                        <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9">
+                             <a href="{% url 'register' %}" 
+                                 class="no-underline text-white bg-[#0763EC] hover:bg-[#073882] hover:text-white rounded-xl px-2 py-1 transition-shadow duration-300 shadow-none hover:shadow-xl hover:shadow-[#073c82]">
+                                    зарегистрироваться
+                             </a>
+                        </h1>
+                {% endif %}
+
             </div>
                 <div class="text-white -mt-20 pt-96 font-serif text-center">
                     <span class="before:block before:absolute before:-inset-6 before:-skew-y-2 before:-skew-x-12 before:bg-blue-600 relative inline-block ">
