--- a/contacts/style.css
+++ b/contacts/style.css
@@ -5,3 +5,57 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+@media only screen and (max-width: 767px) {
+    .map {
+		display: flex;
+		margin: auto;
+		width: 95%;
+		position: relative;
+		overflow: hidden;
+		margin-top: 7rem;
+	  }
+	  .map, .map-border {
+		border-radius: 30px 30px;
+	  }
+	  .map iframe {
+		display: block;
+	  }
+	  .map-border {
+		box-sizing: border-box;
+		position: absolute;
+		inset: 0;
+		pointer-events: none;
+	  }
+	  .map-wrap {
+		width: 400px;
+		height: 400px;
+	  }
+}
+
+@media only screen and (min-width: 1024px) {
+.map {
+	width: 100%;
+	max-width: 810px;
+	position: relative;
+	overflow: hidden;
+	float: right;
+	margin-right: 8rem;
+	margin-top: 7rem;
+  }
+  
+  .map, .map-border {
+	border-radius: 100px 0px;
+  }
+  
+  .map iframe {
+	display: block;
+  }
+  
+  .map-border {
+	box-sizing: border-box;
+	position: absolute;
+	inset: 0;
+	pointer-events: none;
+  }
+}
