--- a/auth/contracts/templates/base.html
+++ b/auth/contracts/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/styleIndex.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex-auto relative w-full h-screen" style="background-color: #131313;">
+<body class="flex-auto relative w-full h-screen text-black" style="background-color: #131313;">
     <header>
         <div>
             <nav class="flex items-center">
