Я сделал как надо
И я еще добавил анимацию кнопок. но скрыть сив код почему то не получается

--- a/auth/contracts/templates/contracts/contract_payment.html
+++ b/auth/contracts/templates/contracts/contract_payment.html
@@ -11,7 +11,7 @@
             <div id="card-element" class="p-2 bg-white rounded"></div>
             <div id="card-errors" role="alert" class="text-red-500 mt-2"></div>
         </div>
-        <button id="pay-button" class="w-full mt-4 bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold">
+        <button id="pay-button" class="w-full mt-4 bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
             Оплатить
         </button>
         <div id="payment-status" class="text-center mt-4 text-white"></div>
