--- a/auth/contracts/templates/base.html
+++ b/auth/contracts/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/styleIndex.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex-auto relative w-full h-screen text-black" style="background-color: #131313;">
+<body class="flex-auto relative w-full h-screen text-white" style="background-color: #131313;">
     <header>
         <div>
             <nav class="flex items-center">
@@ -29,16 +29,33 @@
             </nav>
         </div>
         </header>
-    <nav>
-        <ul>
-            <li><a href="{% url 'contract_list' %}">Мои договоры</a></li>
-            {% if user.is_authenticated %}
-                <li><a href="/admin/logout/">Выйти</a></li>
-            {% else %}
-                <li><a href="/admin/login/">Войти</a></li>
-            {% endif %}
-        </ul>
-    </nav>
+        <nav class="bg-blue-600 p-4 rounded-lg w-96 mx-auto mt-4">
+            <ul class="space-y-4">
+                <li>
+                    <a href="{% url 'contract_list' %}" 
+                       class="block text-center bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
+                        Мои договоры
+                    </a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li>
+                        <a href="/admin/logout/" 
+                           class="block text-center bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
+                            Выйти
+                        </a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a href="/admin/login/" 
+                           class="block text-center bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
+                            Войти
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+        
+        
     {% block content %}{% endblock %}
 </body>
 </html>
