--- a/auth/contracts/templates/contracts/contract_form.html
+++ b/auth/contracts/templates/contracts/contract_form.html
@@ -3,14 +3,48 @@
 {% block content %}
 <div class="flex items-center justify-center min-h-screen">
     <div class="bg-blue-600 p-8 rounded-lg w-96">
-        <h2 class="text-2xl font-bold mb-6 text-center">Создать договор</h2>
+        <h2 class="text-2xl font-bold mb-6 text-center text-white">Создать договор</h2>
         <form method="post" class="space-y-4">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="w-full bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold">
+            <label class="block">
+                <span class="text-white">Сумма:</span>
+                <input type="number" name="amount" 
+                    class="w-full mt-1 p-2 rounded bg-white text-black focus:outline-none border border-gray-300" 
+                    required>
+            </label>
+            <label class="block">
+                <span class="text-white">Название фонда:</span>
+                <input type="text" name="charity_name" 
+                    class="w-full mt-1 p-2 rounded bg-white text-black focus:outline-none border border-gray-300" 
+                    required>
+            </label>
+            <label class="block">
+                <span class="text-white">Реквизиты фонда:</span>
+                <input type="text" name="charity_account" 
+                    class="w-full mt-1 p-2 rounded bg-white text-black focus:outline-none border border-gray-300" 
+                    required>
+            </label>
+            <label class="block">
+                <span class="text-white">Дата завершения:</span>
+                <input type="date" name="due_date" 
+                    class="w-full mt-1 p-2 rounded bg-white text-black focus:outline-none border border-gray-300" 
+                    required>
+            </label>
+            <label class="block">
+                <span class="text-white">Цель:</span>
+                <textarea name="goal" 
+                    class="w-full h-20 mt-1 p-2 rounded bg-white text-black focus:outline-none resize-none border border-gray-300" 
+                    required></textarea>
+            </label>
+            <button type="submit" class="w-full bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
                 Создать
             </button>
         </form>
     </div>
 </div>
 {% endblock %}
+
+
+
+
+
