--- a/auth/contracts/templates/contracts/contract_list.html
+++ b/auth/contracts/templates/contracts/contract_list.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="flex items-center justify-center min-h-screen">
-    <div class="bg-blue-600 p-8 rounded-lg w-96">
-        <h2 class="text-2xl font-bold mb-6 text-center">Мои договоры</h2>
+    <div class="bg-blue-600 p-8 rounded-lg w-96 mt-8">
+        <h2 class="text-2xl font-bold mb-6 text-cente">Мои договоры</h2>
         <ul class="space-y-2">
             {% for contract in contracts %}
                 <li class="text-white">
@@ -13,7 +13,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <a href="{% url 'contract_create' %}" class="block text-center mt-4 bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold">
+        <a href="{% url 'contract_create' %}" class="block text-center mt-4 bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
             Новый договор
         </a>
     </div>
