А еще забыл поменять карту
Вместо пиздолизово теперь цатэк

--- a/auth/accounts/templates/accounts/contacts.html
+++ b/auth/accounts/templates/accounts/contacts.html
@@ -30,7 +30,7 @@
         </div>
         <div class="map">
             <div class="map-wrap">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6445.990343323274!2d51.424063!3d51.242284!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4171b177fb5e1019%3A0x1210a2d6675b8de8!2z0JjQu9GM0Y8g0J_QuNC30LTQsNC70LjQt9C-0LI!5e1!3m2!1sru!2skz!4v1733225116818!5m2!1sru!2skz" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.4959770214814!2d76.95486197554554!3d43.241026078992384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836efbcb65def7%3A0x5004a2dcfd21b0bc!2z0KbQtdC90YLRgNCw0LvRjNC90L7QsNC30LjQsNGC0YHQutC40Lkg0YLQtdGF0L3QuNC60L4t0Y3QutC-0L3QvtC80LjRh9C10YHQutC40Lkg0LrQvtC70LvQtdC00LYgKNCm0JDQotCt0Jop!5e0!3m2!1sru!2skz!4v1733405947995!5m2!1sru!2skz" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="map-border"></div>
         </div>
@@ -39,7 +39,7 @@
             <br>
             <p>Эл.почта: moneyup1925@gmail.com</p>
             <br>
-            <p>Адрес: Мухосранск 69</p>
+            <p>Адрес: проспект Достык 108, Алматы</p>
         </div>
     </main>
 </body>
