--- a/auth/contracts/templates/contracts/contract_form.html
+++ b/auth/contracts/templates/contracts/contract_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="flex items-center justify-center min-h-screen">
-    <div class="bg-blue-600 p-8 rounded-lg w-96">
+    <div class=" p-8 rounded-lg w-96" style="background: linear-gradient(133deg, rgba(114,123,186,1) 7%, rgba(54,72,196,1) 26%, rgba(9,67,249,1) 44%, rgba(10,61,222,1) 60%, rgba(65,98,201,1) 76%, rgba(140,165,244,1) 88%);">
         <h2 class="text-2xl font-bold mb-6 text-center text-white">Создать договор</h2>
         <form method="post" class="space-y-4">
             {% csrf_token %}
@@ -36,7 +36,7 @@
                     class="w-full h-20 mt-1 p-2 rounded bg-white text-black focus:outline-none resize-none border border-gray-300" 
                     required></textarea>
             </label>
-            <button type="submit" class="w-full bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg">
+            <button type="submit" class="w-full bg-blue-700 hover:bg-blue-800 py-2 rounded text-white font-bold transition duration-300 transform hover:scale-105 hover:shadow-lg" style="background: linear-gradient(133deg, rgba(114,123,186,1) 7%, rgba(54,72,196,1) 26%, rgba(9,67,249,1) 44%, rgba(10,61,222,1) 60%, rgba(65,98,201,1) 76%, rgba(140,165,244,1) 88%);">
                 Создать
             </button>
         </form>
