--- a/auth/accounts/templates/index.html
+++ b/auth/accounts/templates/index.html
@@ -55,6 +55,8 @@
                 {% endif %}
 
             </div>
+
+            <div> 
                 <div class="text-white -mt-20 pt-96 font-serif text-center">
                     <span class="before:block before:absolute before:-inset-6 before:-skew-y-2 before:-skew-x-12 before:bg-blue-600 relative inline-block ">
                             <h1 class="font-semibold text-2xl lg:text-6xl relative ">Как это работает?</h1>
@@ -77,31 +79,46 @@
                              <p class="hiddden text-sm text-center font-normal lg:text-xl lg:pt-16 lg:pl-16"> Отмечайте свои успехи и двигайтесь к мечте! Ведите дневник или таблицу прогресса, где будете фиксировать каждый выполненный шаг и достигнутые результаты. Регулярно анализируйте свои действия: что работает хорошо, а что можно улучшить. Не забывайте поощрять себя за достижения, даже небольшие, чтобы поддерживать мотивацию. Каждый маленький успех приближает вас к большой цели, поэтому не игнорируйте важность регулярной обратной связи с самим собой.</p>                    
                 </div>
 
-                <h1 class="hiddden text-2xl text-white lg:text-6xl pt-96 text-center">
-                    Наши достижения
+                <h1 class="hiddden text-2xl text-white lg:text-6xl pt-96 mb-7 text-center">
+                    Мы гарантируем
                 </h1>
 
-                <div class="blue hiddden" style="background-color: #0763EC;">
-                    <div class="icons flex text-white">
-                        <div class="icon-block">
-                            <img src="{% static 'img/Dollar.png' %}" alt="Dollar Icon">
-                            <p class="text-xl">Выдано более миллиона тенге <br> на благотворительность</p>
+                <div class="bg-blue-600 p-10 rounded-3xl">
+                    <div class="flex flex-col md:flex-row justify-around items-center text-white gap-6">
+                        <div class="text-center max-w-xs">
+                            <img class="w-20 mx-auto" src="{% static 'img/Dollar.png' %}" alt="Dollar Icon">
+                            <p class="text-xl mt-4 leading-relaxed">
+                                Надежное<br> хранение денег
+                            </p>
                         </div>
-                        <div class="icon-block">
-                            <img src="{% static 'img/list.png' %}" alt="List Icon">
-                            <p class="text-xl">Зарегистрировались более 1000 <br> человек</p>
+                        <div class="text-center max-w-xs">
+                            <img class="w-20 mx-auto" src="{% static 'img/Anonimnost.png' %}" alt="Anonimnost Icon">
+                            <p class="text-xl mt-4 leading-relaxed">
+                                Сохранность<br> конфедециальных данных
+                            </p>
                         </div>
-                        <div class="icon-block">
-                            <img class="mountain" src="{% static 'img/goal.png' %}" alt="Mountain Icon">
-                            <p class="text-xl">Выполнено более 10000 целей</p>
+                        <div class="text-center max-w-xs">
+                            <img class="w-20 mx-auto" src="{% static 'img/goal.png' %}" alt="Goal Icon">
+                            <p class="text-xl mt-4 leading-relaxed">
+                                Помочь вам в<br> достижении целей
+                            </p>
                         </div>
                     </div>
                 </div>
-            <footer class="text-center">
+            <div> 
+            
+                
+            <footer class="bg-black text-center">
+                   
                     <div class="flex justify-between items-center text-white mt-36 text-sm px-6 mb-4 lg:text-2xl">
                         <p class="flex-1"><a href="{% url 'contacts' %}" class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Контакты</a></p>
                         <p class="flex">© 2024</p>
                     </div>
+
+                    <div class="flex justify-between items-center text-white mt-36 text-sm px-6 mb-4 lg:text-2xl">
+                        <p>Тут мог быть кликер донера</p>
+                    </div>
+                    
             </footer>   
         </main>       
 </body>
