--- a/auth/static/css/styleIndex.css
+++ b/auth/static/css/styleIndex.css
@@ -107,6 +107,8 @@
   }
 
 .blue{
+    display: flex;
+    justify-content: space-between;
 	margin: auto;
 	padding-top: 20rem;
 	margin-top: 5rem;
@@ -114,11 +116,15 @@
 }
 
 .hiddden {
+    display: flex;
+    justify-content: space-between;
     opacity: 0;
     filter: blur(20px);
     transform: translateX(-100%);
     transition: all 1.2s;
 }
+
+
 
 .showw {
     opacity: 1;
