--- a/auth/contracts/templates/base.html
+++ b/auth/contracts/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Stickk Clone{% endblock %}</title>
+    <title>{% block title %}Договор{% endblock %}</title>
     <link rel="stylesheet" href="{% static '' %}">
     <link rel="stylesheet" href="{% static 'css/styleIndex.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
