--- a/auth/contracts/templates/contracts/contract_detail.html
+++ b/auth/contracts/templates/contracts/contract_detail.html
@@ -21,6 +21,7 @@
 
 <!-- Подключение Stripe -->
 <script src="https://js.stripe.com/v3/"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <script>
     const stripe = Stripe('{{ stripe_public_key }}'); // Публичный ключ Stripe
     const elements = stripe.elements();
